feat: enhance benchmarking with modular strategies and improved UI